test/compiler/ecma3/e7_8_3_Err.err
[Compiler] Error #1084: Syntax error: expecting semicolon before rightparen.
   e7_8_3_Err.as, Ln 42, Col 1:
\)
^
[Compiler] Error #1084: Syntax error: expecting identifier before return.
   e7_8_3_Err.as, Ln 48, Col 5:
return \( array \);
....^

2 errors found
